--- a/index.html
+++ b/index.html
@@ -482,7 +482,7 @@
 
   <div class="store-wrap">
     <div class="store-panel">
-      <div class="store-head">Магазин</div>
+      <div class="store-head">Store</div>
       <div class="store-grid" id="store"></div>
     </div>
   </div>
