--- a/index.html
+++ b/index.html
@@ -246,7 +246,7 @@
   .cdbar{
     position:absolute; 
     left:3px; right:3px; bottom:3px; 
-    height:3px; border-radius:999px;
+    height:4px; border-radius:999px;
     background: #ffffff;
     overflow:hidden; 
     border:1px solid rgba(100,116,139,.4);
@@ -254,9 +254,9 @@
   }
   .cdbar .fill{
     height:100%; width:0%; 
-    background: linear-gradient(90deg, #ffd700, #ffed4e);
+    background: linear-gradient(90deg, #10b981, #34d399);
     transition: width .1s ease-out;
-    box-shadow: 0 0 6px rgba(255,215,0,.8);
+    box-shadow: 0 0 8px rgba(16,185,129,.8);
     border-radius:999px;
   }
 
@@ -332,38 +332,6 @@
   .btn:hover{transform:translateY(-1px); background:linear-gradient(180deg,#f8fafc,#e2e8f0); box-shadow: 0 4px 6px rgba(100,116,139,.15)}
   .btn:active{transform:translateY(0)}
 
-  /* Новый блок с описанием усилителей */
-  .enhancer-info {
-    padding: 8px 12px;
-    background: rgba(255,255,255,.7);
-    border-top: 1px solid rgba(100,116,139,.1);
-    font-size: 11px;
-    color: var(--muted);
-    text-align: center;
-    display: flex;
-    justify-content: center;
-    gap: 20px;
-    flex-wrap: wrap;
-  }
-  .enhancer-desc {
-    display: flex;
-    align-items: center;
-    gap: 6px;
-  }
-  .enhancer-icon {
-    width: 18px;
-    height: 18px;
-    border-radius: 3px;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    font-size: 8px;
-    font-weight: 700;
-    border: 1px solid rgba(100,116,139,.3);
-  }
-  .enhancer-icon.metronome { background: var(--metronome); }
-  .enhancer-icon.string { background: var(--string); }
-
   .store-wrap{
     position:sticky; bottom:0; z-index:9;
     padding:8px 12px 12px; 
@@ -383,6 +351,41 @@
     font-weight: 600;
     font-size: 14px;
   }
+  
+  /* Информация об усилителях в магазине */
+  .store-info {
+    margin-bottom: 12px;
+    padding: 8px;
+    background: rgba(248,250,252,.8);
+    border-radius: 8px;
+    border: 1px solid rgba(100,116,139,.15);
+  }
+  .enhancer-desc {
+    display: flex;
+    align-items: center;
+    gap: 6px;
+    margin-bottom: 4px;
+    font-size: 10px;
+    color: var(--muted);
+  }
+  .enhancer-desc:last-child {
+    margin-bottom: 0;
+  }
+  .enhancer-icon {
+    width: 16px;
+    height: 16px;
+    border-radius: 3px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    font-size: 7px;
+    font-weight: 700;
+    border: 1px solid rgba(100,116,139,.3);
+    flex-shrink: 0;
+  }
+  .enhancer-icon.metronome { background: var(--metronome); }
+  .enhancer-icon.string { background: var(--string); }
+
   .store-grid{ 
     display:grid; grid-template-columns: repeat(3, 80px); gap:8px; justify-content:center;
     max-width: calc(3 * 80px + 2 * 8px);
@@ -443,8 +446,8 @@
     .store-grid { grid-template-columns: repeat(3, 70px); gap: 6px; }
     .slot { width: 70px; height: 70px; }
     .ghost { transform: scale(1.2); }
-    .enhancer-info { font-size: 10px; gap: 15px; }
-    .enhancer-icon { width: 16px; height: 16px; font-size: 7px; }
+    .enhancer-desc { font-size: 9px; }
+    .enhancer-icon { width: 14px; height: 14px; font-size: 6px; }
   }
 </style>
 </head>
@@ -469,20 +472,19 @@
     <button class="btn" id="clearBoardBtn">🗑️ Clear</button>
   </div>
 
-  <div class="enhancer-info">
-    <div class="enhancer-desc">
-      <div class="enhancer-icon metronome">H</div>
-      <span><strong>Metronome</strong> — speeds up dice cooldown in line (H/V)</span>
-    </div>
-    <div class="enhancer-desc">
-      <div class="enhancer-icon string">↑</div>
-      <span><strong>Strings</strong> — constantly speed up dice in direction</span>
-    </div>
-  </div>
-
   <div class="store-wrap">
     <div class="store-panel">
       <div class="store-head">Store</div>
+      <div class="store-info">
+        <div class="enhancer-desc">
+          <div class="enhancer-icon metronome">H</div>
+          <span><strong>Metronome</strong> — speeds up dice cooldown in line (H/V)</span>
+        </div>
+        <div class="enhancer-desc">
+          <div class="enhancer-icon string">↑</div>
+          <span><strong>Strings</strong> — constantly speed up dice in direction</span>
+        </div>
+      </div>
       <div class="store-grid" id="store"></div>
     </div>
   </div>
@@ -667,12 +669,12 @@
       beginDragFromBoard(p,r,c,e);
     });
 
-    // Touch events
+    // Touch events - только если на ячейке нет объекта
     el.addEventListener('touchstart', (e)=>{
-      e.preventDefault();
-      const p=getPieceAt(r,c); if(!p) return;
-      beginDragFromBoard(p,r,c,e);
-    }, { passive: false });
+      const p=getPieceAt(r,c); 
+      if(p) return; // Если есть объект, пусть его обработчик сработает
+      // Пустая ячейка - ничего не делаем
+    }, { passive: true });
 
     return el;
   }
@@ -733,7 +735,7 @@
       beginDragFromBoard(p,pos.r,pos.c,e);
     });
 
-    // Touch events
+    // Touch events - исправлено для мгновенного начала drag
     node.addEventListener('touchstart', (e)=>{
       e.preventDefault();
       e.stopPropagation();
